tests/baselines/reference/moduleResolutionWithSuffixes_one_externalModule_withPaths.errors.txt
/tsconfig.json(6,23): error TS5107: Option 'moduleResolution=node10' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
  Visit https://aka.ms/ts6 for migration information.
/tsconfig.json(9,3): error TS5101: Option 'baseUrl' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
  Visit https://aka.ms/ts6 for migration information.


==== /tsconfig.json (2 errors) ====
    {
    	"compilerOptions": {
    		"allowJs": true,
    		"checkJs": false,
    		"outDir": "bin",
    		"moduleResolution": "node",
    		                    ~~~~~~
!!! error TS5107: Option 'moduleResolution=node10' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
!!! error TS5107:   Visit https://aka.ms/ts6 for migration information.
    		"traceResolution": true,
    		"moduleSuffixes": [".ios"],
    		"baseUrl": "/",
    		~~~~~~~~~
!!! error TS5101: Option 'baseUrl' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
!!! error TS5101:   Visit https://aka.ms/ts6 for migration information.
    		"paths": {
    			"some-library": ["node_modules/some-library/lib"],
    			"some-library/*": ["node_modules/some-library/lib/*"]
    		}
    	}
    }
    
==== /test.ts (0 errors) ====
    import { ios } from "some-library";
    import { ios as ios2 } from "some-library/index";
    import { ios as ios3 } from "some-library/index.js";
    
==== /node_modules/some-library/lib/index.ios.js (0 errors) ====
    "use strict";
    exports.__esModule = true;
    function ios() {}
    exports.ios = ios;
==== /node_modules/some-library/lib/index.ios.d.ts (0 errors) ====
    export declare function ios(): void;
==== /node_modules/some-library/lib/index.js (0 errors) ====
    "use strict";
    exports.__esModule = true;
    function base() {}
    exports.base = base;
==== /node_modules/some-library/lib/index.d.ts (0 errors) ====
    export declare function base(): void;
    